# backend

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Egypt Metro DB.session.sql  LICENSE  Procfile  README.md  cert.crt  cert.key  git_dangling.txt  manage.py  pyproject.toml  recovered_file.txt  render.yaml  requirements.txt  urls.txt
.github/workflows/: django.yml
apps/analytics/: admin.py  apps.py  models.py  reports.py  services.py  urls.py  views.py
apps/analytics/migrations/: 0001_initial.py  0002_ticketusagerecord_usage_type_and_more.py
apps/authentication/: models.py  serializers.py  services.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/templates/: reset_password_email.html
apps/dashboard/: admin.py  apps.py  exceptions.py  models.py  signals.py  urls.py  utils.py
apps/dashboard/api/: permissions.py  serializers.py  views.py
apps/dashboard/constants/: metrics_choices.py  report_types.py
apps/dashboard/migrations/: 0001_initial.py
apps/dashboard/services/: analytics_service.py  base_service.py  export_service.py  performance_service.py  report_service.py  revenue_service.py
apps/dashboard/tasks/: analytics_tasks.py  reporting_tasks.py
apps/dashboard/utils/: model_loader.py  report_generators.py  validators.py
apps/dashboard/views/: dashboard_views.py  revenue_views.py  station_views.py  ticket_views.py
apps/lines/: apps.py  models.py
apps/routes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/routes/migrations/: 0001_initial.py  0002_alter_precomputedroute_options.py  0002_remove_precomputed_route.py  0003_remove_precomputedroute_distance_and_more.py  0003_route_delete_precomputedroute_and_more.py  0004_remove_precomputedroute_routes_prec_start_s_d2a4df_idx_and_more.py  0004_route_number_of_stations_route_primary_line_and_more.py
apps/routes/services/: cache_service.py  graph_service.py  route_service.py
apps/routes/utils/: validation.py
apps/stations/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
apps/stations/migrations/: 0001_initial.py  0002_connectingstation.py  0003_interchange.py  0004_remove_connectingstation_lines_and_more.py  0005_connectingstation.py
apps/stations/services/: route_service.py  station_service.py  ticket_service.py
apps/stations/utils/: location_helpers.py  location_utils.py  monitoring.py
apps/tickets/: apps.py  authentication.py  permissions.py  signals.py
apps/tickets/admin/: __init__.py  subscription_admin.py  ticket_admin.py
apps/tickets/api/: urls.py
apps/tickets/constants/: choices.py  pricing.py
apps/tickets/migrations/: 0001_initial.py  0002_stationzone_subscriptionplan_usersubscription_and_more.py  0003_ticket_upgrade_required.py  0004_remove_ticket_upgrade_required_ticket_needs_upgrade_and_more.py  0005_usersubscription_covered_zones.py
apps/tickets/models/: __init__.py  subscription.py  ticket.py
apps/tickets/services/: hardware_service.py  qr_service.py  subscription_qr_service.py  subscription_service.py  ticket_service.py  validation_service.py
apps/tickets/utils/: price_calculator.py  qr_generator.py
apps/trains/: admin.py  apps.py  constants.py  consumers.py  signals.py
apps/trains/api/: filters.py  pagination.py  permissions.py  serializers.py  swagger.py  urls.py  views.py
apps/trains/constants/: choices.py
apps/trains/docs/: ai_integration.md  api_requirements.py
apps/trains/migrations/: 0001_initial.py  0002_alter_train_train_id.py  0003_alter_crowdmeasurement_confidence_score_and_more.py
apps/trains/models/: __init__.py  crowd.py  schedule.py  train.py
apps/trains/services/: ai_service.py  crowd_service.py  schedule_service.py  train_service.py
apps/trains/tests/: factories.py  test_api.py  test_websocket.py
apps/trains/utils/: error_handling.py  file_validator.py  validators.py
apps/users/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/users/admin/: __init__.py  actions.py  filters.py  user_admin.py
apps/users/api/: urls.py
apps/users/api/views/: __init__.py  (+4 more)
apps/users/backends/: __init__.py  auth_backends.py
apps/users/constants/: __init__.py  choices.py  messages.py  validation.py
apps/users/managers/: __init__.py  user_manager.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_balance_alter_user_national_id_and_more.py  0002_fix_subscription_type_field.py  0003_alter_user_subscription_type.py  0003_alter_user_username.py  0004_alter_user_phone_number.py  0004_fix_subscription_type_production.py  0005_alter_user_phone_number.py  0005_alter_user_subscription_type.py  0006_alter_user_national_id.py  0007_fix_user_fields_nullable.py  0008_alter_user_national_id_alter_user_phone_number.py  0009_alter_user_payment_method.py
apps/users/services/: auth_service.py  data_integrity_service.py  profile_service.py
apps/users/utils/: decorators.py  helpers.py  response_helpers.py  validators.py
apps/wallet/: apps.py
apps/wallet/admin/: __init__.py  payment_method_admin.py  transaction_admin.py  wallet_admin.py
apps/wallet/api/: urls.py
apps/wallet/constants/: choices.py  messages.py
apps/wallet/migrations/: 0001_initial.py
apps/wallet/models/: payment_method.py  transaction.py  wallet.py
apps/wallet/services/: integration_service.py  payment_service.py  wallet_service.py
apps/wallet/utils/: notification_helpers.py  validators.py
egypt_metro/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
metro/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
static/admin/css/: user_admin.css
static/admin/js/: user_admin.js
static/admin/users/: statistics.html
static/css/: admin.css  animations.css  style.css
static/custom_admin/css/: station_autocomplete.css
static/js/: animations.js  main.js  particles-config.js
templates/: base.html  home.html
templates/includes/: api_docs.html  footer.html  header.html  metro_map.html
templates/metro/: home.html
(+55 files in other folders)
