[tool.black]
line-length = 88
target-version = ["py38", "py39"]

[tool.poetry]
name = "egypt-metro-backend"
version = "0.1.0"
description = "Backend for Egypt Metro project"
authors = ["Ahmed Nassar <a.moh.nassar00@gmail.com>"]
package-mode = false  # Disable packaging mode

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
httpx = "^0.21.1"
starlette = "^0.14.2"
asyncpg = "^0.30.0"
gunicorn = "^23.0.0"
pywin32 = { version = "306", optional = true, markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
httpx = "^0.21.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Add this section to specify the package directory
packages = [
    { include = "egypt_metro" },  # Main package
]